Revert "* Add the object a1_vs_p1_clusters (a1_vs_p1_clusters.rds)"
This reverts commit c3d7d28c690092b990f02745746d0ecea330e659.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,18 +14,14 @@ Authors@R:
       person(given = "Fred",
              family = "Tan",
              email = "tan@carnegiescience.edu",
-             role = c("aut")),
-      person(given = "Sayumi",
-             family = "York",
-             email = "syork@ndm.edu",
              role = c("aut")))
-Description: Loads the R objects for data associated with "Physiological and stem cell compartmentalization within the Drosophila midgut" by Marianes & Spradling (2013) (https://elifesciences.org/articles/00886)"
+Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.1
 Depends: 
-    R (>= 3.5)
+    R (>= 2.10)
 LazyData: true
 Imports: 
     tibble
