--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,12 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5)
 LazyData: true
 Imports: 
+    DESeq2,
+    DOSE,
+    SummarizedExperiment,
     tibble
